# CodeEditor

./: .gitignore  CMakeLists.txt  README.md
example/: CMakeLists.txt
example/include/: MainWindow.hpp
example/src/: MainWindow.cpp
include/: CodeEditor
include/internal/: CodeEditor.hpp  QCXXHighlighter.hpp  QGLSLHighlighter.hpp  QJSONHighlighter.hpp  QLineNumberArea.hpp  QLuaHighlighter.hpp  QPythonHighlighter.hpp  QSyntaxStyle.hpp  QXMLHighlighter.hpp
resources/: codeeditor_resources.qrc
src/internal/: CodeEditor.cpp  QCXXHighlighter.cpp  QFramedTextAttribute.cpp  QGLSLCompleter.cpp  QGLSLHighlighter.cpp  QJSONHighlighter.cpp  QLanguage.cpp  QLineNumberArea.cpp  QLuaCompleter.cpp  QLuaHighlighter.cpp  QPythonCompleter.cpp  QPythonHighlighter.cpp  QStyleSyntaxHighlighter.cpp  QSyntaxStyle.cpp  QXMLHighlighter.cpp
